fix: fixing java ops params for java 17