@@ -11,8 +11,8 @@ ENV LANGUAGE en_CA.UTF-8
 ENV LC_ALL en_CA.UTF-8
 
 ENV HEAP_LOG_PATH /usr/share/service/dump
-ENV JAVA_OPS -Xms256m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=$HEAP_LOG_PATH
-ENV JAVA_DEBUG_OPS -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:$HEAP_LOG_PATH/garbage-collection.log
+ENV JAVA_OPS ""
+ENV JAVA_DEBUG_OPS ""
 ENV DEBUG_MODE false
 
 COPY ./*.jar /usr/share/service/service.jar
